--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,42 +1,191 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* .logo {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  width: auto;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+} */
+
+.logo-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  justify-content: center;
+  height: 200px;
+}
+
+.logo-svg {
+  width: 150px;
+  height: 150px;
+}
+
+.circle {
+  animation: scaleUp 2s infinite ease-in-out;
+  transform-origin: center;
+}
+
+.tagline {
+  font-size: 14px;
+  color: #4caf50;
+  margin-top: 10px;
+  animation: fadeIn 3s infinite;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+    stroke-opacity: 0.7;
+  }
+  50% {
+    transform: scale(1.1);
+    stroke-opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    stroke-opacity: 0.7;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.header {
+  width: 80%;
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  gap: 20px;
+  padding: 10px 20px;
+  align-items: center;
+  background-color: purple;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.home-btn {
+  padding: 1rem;
+  font-size: x-large;
+  color: rgb(36, 31, 31);
+}
+
+.search-bar{
+  width: 100%;
+  border: none;
+  border-bottom: 4px solid #000;
+  font-size: 1.2rem;
+  border-radius: 16px;
+  padding: 5px;
+}
+
+.search-bar:focus{
+  outline: none;
+  border-bottom: 4px solid blue;
+}
+
+.search-btn {
+  margin: 1rem 1rem 1rem 0.3rem;
+}
+
+.user-icon {
+  padding: 1rem;
+  font-size: x-large;
+  color: rgb(36, 31, 31);
+}
+
+.navbar {
+  height: auto;
+  align-items: fit-content;
+  width: auto;
+  position: fixed;
+  z-index: 1;
+  top: 230px;
+  left: 0;
+  background-color: #121c9c;
+  padding-top: 15px;
+  transition: 0.5s;
+  border-radius: 15px;
+}
+
+.navbar ul {
+  list-style-type: none;
+}
+
+.navbar li {
+ padding: 8px 8px 8px 32px;
+ text-decoration: none;
+ font-size: 20px;
+ color: #818181;
+ display: block;
+ transition: 0.3s;
+ padding: 10px;
+ border-top: 1px solid #818181;
+}
+
+.navbar li:hover {
+  color: #F1F1F1;
+}
+
+.legislation-section {
+  display: flex; 
+  justify-content: center;
+  color: darkblue;
+  margin-top: 250px;
+}
+
+.legislation-list {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  gap: 16px;
+}
+
+.legislation-card {
+  list-style-type: none;
+  background-color: #F0F0F0;
+  padding: 16px;
+  border: 1px solid #ccc;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.legislation-summary {
+  color: midnightblue;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 090px;
+  padding: 10px 20px;
+  background-color: purple;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 600px) {
+  .App {
+    grid-template-columns: 25% 75%;
+    grid-template-rows: min-content auto;
+    grid-template-areas:
+      "header header"
+      "navbar legislation-section";
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
