--- a/front-end/src/css/LoginPage.css
+++ b/front-end/src/css/LoginPage.css
@@ -91,6 +91,7 @@
     padding: 10px;
     cursor: pointer;
     transition: background 0.3s;
+    border-radius: 5px;
 }
 
 .right-panel form button:hover {
