styles leg section and buttons

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#report-btn {
+    background-color: #9049A4 !important;
+}
+
+#track-btn {
+    background-color: #9049A4  !important;
+}
