--- a/front-end/src/css/LoginPage.css
+++ b/front-end/src/css/LoginPage.css
@@ -4,11 +4,15 @@
     box-sizing: border-box;
   }
   
-  body {
+  html, body {
     font-family: Arial, sans-serif;
     line-height: 1.5;
+    height: 100%
   }
   
+  #root, #app-1 {
+    min-height: 100%;
+  }
 
 .container {
     display: flex;
