styling-legislation-cards

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 #report-btn {
-    background-color: #9049A4 !important;
+  background-color: #9049a4 !important;
 }
 
 #track-btn {
-    background-color: #9049A4  !important;
+  background-color: #9049a4 !important;
 }
 
 /* #subsect-btn {
@@ -15,7 +15,7 @@
 } */
 
 #subsect-btn {
-    background-color: #909090  !important;
-    color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #909090 !important;
+  color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
