--- a/front-end/src/css/ReportPopup.css
+++ b/front-end/src/css/ReportPopup.css
@@ -1,49 +1,106 @@
 .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  animation: fadeIn 0.3s ease-out;
+}
+
+.popup-content {
+  background-color: #ffffff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 90%;
+  position: relative;
+  font-family: montserrat;
+  animation: slideUp 0.4s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .popup-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 500px;
-    width: 90%;
-    position: relative;
+  to {
+    opacity: 1;
   }
-  
-  .close-button {
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    cursor: pointer;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
   }
-  
-  .input {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
-  
-  .textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    height: 100px;
-  }
+}
+
+.popup-title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+ 
+  border-radius: 50%;
+  background: linear-gradient(to right, #6b46c1, #4c51bf); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.close-button:hover {
+  background: linear-gradient(to left, #6b46c1, #4c51bf); 
+}
+
+.close-button:focus {
+  outline: none;
+  ring: 4px solid rgba(156, 163, 175, 0.3);
+  ring-color: rgba(156, 163, 175, 0.4);
+}
+
+.input,
+.textarea {
+  width: 100%;
+  padding: 12px 15px;
+  margin-top: 15px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  font-size: 1rem;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.input:focus,
+.textarea:focus {
+  border-color: #0052cc;
+  box-shadow: 0 0 5px rgba(0, 82, 204, 0.5);
+  outline: none;
+}
+
+.textarea {
+  height: 120px;
+  resize: vertical;
+}
+
+ #report-popup-button {
+  margin-top: 15px;
+ }
