--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -1,3 +1,36 @@
 .app-background-colour {
   background: #bbc1f8c0;
 }
+
+#user-preferences-card {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100% !important;
+  max-width: 40rem !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  margin-left: 55%;
+  margin-top: 15%;
+  text-align: center !important;
+}
+
+@media (max-width: 768px) {
+  #user-preferences-card {
+    width: 100% !important; 
+    max-width: 100% !important;
+    margin-left: 0; 
+    margin-top: 40%; 
+    padding: 1rem; 
+  }
+}
+
+.category-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
