--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -55,3 +55,10 @@
     word-wrap: break-word; 
   }
 }
+
+.success-message {
+  margin-top: 10px;
+  color: green;
+  font-size: 1rem;
+  text-align: center;
+}
